# SteelEye-Challenge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  modules.rst  steeleye.rst
src/steeleye/: config.py  downloader.py  main.py  parser.py  storage.py
tests/: test_downloader.py  test_parser.py
