[project]
name = "steeleye-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "fsspec[s3] (>=2025.5.1,<2026.0.0)",
    "adlfs (>=2024.12.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
sphinx = "^8.2.3"
furo = "^2024.8.6"

